# QtCrochetPatternCounter

./: .gitignore  CMakeLists.txt  FileSelect.qml  main.cpp  main.qml  qml.qrc
qmlFiles/: AboutNav.qml  CounterNav.qml  CounterOptions.qml  CrochetPatternCounter.qml  FileSelect.qml  LeftDisplayArea.qml  Navbar.qml  RightDisplayArea.qml  SettingsNav.qml
qmlObjects/: CounterNav.cpp  CounterNav.h  CrochetPatternCounter.cpp  CrochetPatternCounter.h  LeftDisplayArea.cpp  LeftDisplayArea.h  RightDisplayArea.cpp  RightDisplayArea.h  countButton.cpp  countButton.h  inputFields.cpp  inputFields.h  navigation.cpp  navigation.h  selectfile.cpp  selectfile.h
